packages/infrastructure/root_package_observability/mesh/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chat-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - gateway
  http:
  - match:
    - uri:
        prefix: /ws
    route:
    - destination:
        host: chat-backend.default.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: chat-frontend.default.svc.cluster.local
        port:
          number: 80
